--- a/hwk/hwk01/hwk01-ans.tex
+++ b/hwk/hwk01/hwk01-ans.tex
@@ -218,4 +218,8 @@ This denisty corresponds to a ``shifted'' exponential distribution with \(\lambd
     \(F \big( \delta^*(x) \big) = 1 - \mathrm{e}^{-(\delta^*(x) - x)} = 1/2\), and solving for \(\delta^*(x)\) gives us \(\delta^*(x) = x + \log 2\).
 \end{itemize}
 
+%' ============================================================================================================================================================
+\section{Question 8} \noindent
+
+
 \end{document}
