--- a/hwk/hwk01/hwk01-ans.tex
+++ b/hwk/hwk01/hwk01-ans.tex
@@ -304,7 +304,7 @@ By the Factorization Theorem, \(\bar{X}\) and \(X_{(1)}\) are a pair of jointly 
 %     = \prod_{i=1}^n \frac{\alpha x_0^{\alpha}}{x_i^{\alpha + 1}} \mathbb{I}_{[x_0, \infty)}(x_i)
 %     = \alpha^n x_0^{n \alpha} \left( \prod_{i=1}^n \frac{1}{x_i} \right)^{\alpha + 1} \mathbb{I}_{[x_0, \infty)}(x_{(1)})
 % \end{align*}
-Let \(x_1, \ldots, X_n \overset{\text{iid}}{\sim} \mathrm{Pareto}(\alpha, x_0)\), where \(\alpha > 0\) is known and \(x_0 > 0\) is unknown. The likelihood 
+Let \(X_1, \ldots, X_n \overset{\text{iid}}{\sim} \mathrm{Pareto}(\alpha, x_0)\), where \(\alpha > 0\) is known and \(x_0 > 0\) is unknown. The likelihood 
 function is given by 
 \begin{align*}
     f(\mathbf{x} \,|\, \alpha, x_0) 
